@@ -211,79 +211,3 @@ fprintf(stderr, "--> mireRegcomp(%p, \"%s\") rc %d\n", mire, pattern, rc);
 /*@=modfilesys@*/
     return rc;
 }
-
-/* =============================================================== */
-
-#if defined(STANDALONE)
-
-#include <poptIO.h>
-
-static rpmMireMode mireMode = RPMMIRE_REGEX;
-
-static struct poptOption optionsTable[] = {
-
- { "strcmp", '\0', POPT_ARG_VAL,	&mireMode, RPMMIRE_STRCMP,
-	N_("use strcmp matching"), NULL},
- { "regex", '\0', POPT_ARG_VAL,		&mireMode, RPMMIRE_REGEX,
-	N_("use regex matching"), NULL},
- { "fnmatch", '\0', POPT_ARG_VAL,	&mireMode, RPMMIRE_GLOB,
-	N_("use fnmatch matching"), NULL},
- { "pcre", '\0', POPT_ARG_VAL,		&mireMode, RPMMIRE_PCRE,
-	N_("use pcre matching"), NULL},
-
- { NULL, '\0', POPT_ARG_INCLUDE_TABLE, rpmioAllPoptTable, 0,
-	N_("Common options for all rpmio executables:"),
-	NULL },
-
-  POPT_AUTOHELP
-  POPT_TABLEEND
-};
-
-int
-main(int argc, char *argv[])
-{
-    poptContext optCon = rpmioInit(argc, argv, optionsTable);
-    miRE mire = NULL;
-    ARGV_t av = NULL;
-    int ac = 0;
-    int rc = 1;
-    int xx;
-    int i;
-
-    if (__debug) {
-_mire_debug = 1;
-    }
-
-    av = poptGetArgs(optCon);
-    if ((ac = argvCount(av)) != 1)
-	goto exit;
-
-    mire = mireNew(mireMode, 0);
-    if ((rc = mireRegcomp(mire, av[0])) != 0)
-	goto exit;
-    
-    av = NULL;
-    if ((rc = argvFgets(&av, NULL)) != 0)
-	goto exit;
-
-    rc = 1;	/* assume nomatch failure. */
-    ac = argvCount(av);
-    if (av && *av)
-    for (i = 0; i < ac; i++) {
-	xx = mireRegexec(mire, av[i]);
-	if (xx == 0) {
-	    fprintf(stdout, "%s\n", av[i]);
-	    rc = 0;
-	}
-    }
-    av = argvFree(av);
-
-exit:
-    mire = mireFree(mire);
-
-    optCon = rpmioFini(optCon);
-
-    return rc;
-}
-
-#endif	/* STANDALONE */
